--- a/views/test.html
+++ b/views/test.html
@@ -291,6 +291,7 @@ $(document).on('click', 'canvas', function() {
 	left: 800px;
 }
 */
+//gcloud app deploy --project findfriendpoker001
 </script>
 
 
