--- a/views/game.html
+++ b/views/game.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Table Page</title>
-<script src="/static/javascripts/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+<script src="/library/jquery/dist/jquery.min.js"></script>
+<script src="/library/socket.io-client/dist/socket.io.js"></script>
 <script src="/static/javascripts/functions.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/stylesheets/style.css">
 </head>
